--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/blue_400</item>
         <item name="colorPrimaryDark">@color/blue_900</item>
@@ -9,6 +9,11 @@
 
         <item name="android:textColorPrimary">@android:color/white</item>
         <item name="android:textColorSecondary">@color/grey_500</item>
+
+        <item name="windowActionBar">false</item>
     </style>
+
+    <style name="MainTheme" parent="AppTheme.Base"/>
+
 
 </resources>
