--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,6 +11,10 @@
           android:title="Remove Alarm"
           app:showAsAction="never"/>
 
+    <item android:id="@+id/edit_activity"
+        android:title="Edit Activity"
+        app:showAsAction="never"/>
+
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
