--- a/app/src/main/res/menu/menu_edit.xml
+++ b/app/src/main/res/menu/menu_edit.xml
@@ -2,8 +2,9 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="org.jakelcode.schedule.EditActivity">
-    <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+
+    <item android:id="@+id/action_confirm"
+          android:icon="@drawable/abc_ic_commit_search_api_mtrl_alpha"
+          android:title="@string/action_confirm"
+          app:showAsAction="always"/>
 </menu>
