--- a/app/src/main/res/menu/menu_setting.xml
+++ b/app/src/main/res/menu/menu_setting.xml
@@ -2,9 +2,10 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="org.jakelcode.schedule.SettingActivity">
-    <item android:id="@+id/action_confirm"
-          android:icon="@drawable/abc_btn_check_material"
-          android:title="@string/action_confirm"
-          android:orderInCategory="100"
-          app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_confirm"
+        android:icon="@drawable/abc_btn_check_material"
+        android:title="@string/action_confirm"
+        android:orderInCategory="100"
+        app:showAsAction="ifRoom"/>
 </menu>
