--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
 
     <dimen name="schedule_card_height">148dp</dimen>
     <dimen name="schedule_card_image_width">128dp</dimen>
+    <dimen name="button_width_small">42dp</dimen>
 </resources>
