--- a/app/src/main/res/layout/include_toolbar_long.xml
+++ b/app/src/main/res/layout/include_toolbar_long.xml
@@ -4,7 +4,7 @@
     <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                        android:id="@+id/include_toolbar_long"
                                        android:layout_width="match_parent"
-                                       android:layout_height="232dp"
+                                       android:layout_height="@dimen/long_toolbar_height"
                                        android:minHeight="?attr/actionBarSize"
                                        android:background="?attr/colorPrimary">
     </android.support.v7.widget.Toolbar>
