--- a/app/src/main/res/layout/view_schedule_card.xml
+++ b/app/src/main/res/layout/view_schedule_card.xml
@@ -3,7 +3,8 @@
                                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                     android:id="@+id/schedule_card"
                                     android:layout_width="match_parent"
-                                    android:layout_height="@dimen/schedule_card_height"
+                                    android:layout_height="wrap_content"
+                                    android:minHeight="@dimen/schedule_card_height"
                                     android:layout_margin="@dimen/spacing_small"
 
                                     card_view:cardBackgroundColor="@android:color/white"
