--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
+                xmlns:fab="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
@@ -13,4 +14,17 @@
         android:layout_marginTop="?attr/actionBarSize"
         android:padding="@dimen/spacing_small"/>
 
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/schedule_fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="@dimen/spacing_large"
+        android:src="@drawable/ic_add_white_24dp"
+        fab:fab_colorNormal="@color/pink_500"
+        fab:fab_colorPressed="@color/pink_400"
+        fab:fab_colorRipple="@color/pink_200"
+        />
 </RelativeLayout>
